[gd_scene load_steps=8 format=3 uid="uid://dhvabo5lp4egj"]

[ext_resource type="Script" uid="uid://bs850mfu7wllk" path="res://objects/power_cable.gd" id="1_m78di"]
[ext_resource type="Texture2D" uid="uid://bi2kq352pe774" path="res://sprites/temps/yellow_square.png" id="2_bvvpn"]
[ext_resource type="Texture2D" uid="uid://b8wj7d4n63cc6" path="res://sprites/temps/grey_circle.png" id="2_ru7tx"]
[ext_resource type="Texture2D" uid="uid://dsvwihhtcxqpw" path="res://sprites/temps/black_circle.png" id="3_402ci"]
[ext_resource type="Texture2D" uid="uid://bu6kctftacoaf" path="res://sprites/temps/black_square.png" id="3_rdu7w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p5bab"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_402ci"]
radius = 4.1231055

[node name="PowerCable" type="Node2D" node_paths=PackedStringArray("power_indicator_on")]
script = ExtResource("1_m78di")
power_indicator_on = NodePath("cable_head")

[node name="cable_head_no_power" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(0, -16)
texture = ExtResource("2_ru7tx")

[node name="cable_head" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 3
position = Vector2(0, -16)
texture = ExtResource("2_bvvpn")

[node name="cable_body" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 3
position = Vector2(10, 1)
texture = ExtResource("3_rdu7w")

[node name="head_hitbox" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape2D" parent="head_hitbox"]
shape = SubResource("CircleShape2D_p5bab")
debug_color = Color(0.8901961, 0, 0.8, 1)

[node name="cable_spool" type="Sprite2D" parent="."]
texture_filter = 3
texture = ExtResource("3_402ci")

[node name="StaticBody2D" type="StaticBody2D" parent="cable_spool"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cable_spool/StaticBody2D"]
shape = SubResource("CircleShape2D_402ci")
